fixed CSS for the salesOverview so text is divided equally and numbers align on same level in all boxes

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ h2 {
 /* Basisstijl voor alle boxen */
 .salesOverview {
     flex: 1;
-    max-width: 250px;
-    padding: 2em;
+    max-width: 200px;
+    padding: 1.5em;
     border: 2px solid;
     border-radius: 8px;
     text-align: center;
@@ -58,3 +58,5 @@ h2 {
     font-weight: bold;
     margin-top: 0.5em;
 }
+
+
